# krexa-hosted-apps

./: .gitignore  CONTRIBUTING.md  README.md  krexa-aomi-launch.md  platform.json
.github/scripts/: build_candidate.py  publish_app.py
.github/workflows/: build-candidate.yml  publish-apps.yml
apps/139182861/cecilia-test-2/: .gitignore  Cargo.toml  README.md  aomi.toml
apps/139182861/cecilia-test-2/.aomi/: deployment.json
apps/139182861/cecilia-test-2/apps/cecilia-test-3/: Cargo.toml
apps/139182861/cecilia-test-2/src/: client.rs  lib.rs  tools.rs
apps/139182861/cecilia-test-3/: aomi.toml
apps/139182861/cecilia-test-3/.aomi/: deployment.json
apps/139182861/cecilia-test-3/src/: lib.rs
apps/141779906/r229e1090c5/.aomi/: source-branch.json
apps/141779906/r229e1090c5/krexa-agent/: Cargo.toml  aomi.toml
apps/hello-ci/: Cargo.toml
apps/hello-ci/.aomi/: deployment.json
apps/hello-ci/.aomi-publish/: manifest.json
apps/krexa-smoke-20260524/: Cargo.toml
apps/krexa-smoke-20260524/.aomi/: deployment.json
apps/krexa-smoke-20260524/.aomi-publish/: manifest.json
apps/krexa-smoke-20260524/src/: lib.rs
apps/my-krexa-bot/: Cargo.toml  aomi.toml
apps/my-krexa-bot/.aomi/: deployment.json
apps/my-krexa-bot/.aomi-publish/: manifest.json
ci/: platform.json
docs/adr/: 0011-fe-deploy-proxy.md
examples/hello-ci/.aomi-publish/: manifest.json
fixtures/hello-ci/src/: lib.rs
fixtures/hello-world/: Cargo.toml  aomi.toml
fixtures/hello-world/src/: lib.rs
scripts/: publish_app.py
source/my-krexa-bot/: Cargo.toml
source/my-krexa-bot/src/: lib.rs
(+2 files in other folders)
